<resources>
    <string name="app_name">diary</string>
    <string name="add">+</string>
    <string name="expand">EXPAND</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="personal_img">personal img</string>
    <string name="name">NAME</string>
    <string name="number">1234567890</string>
    <string name="more_actions_description">more actions</string>
    <string name="add_but_description">add contact</string>
    <string name="inspect">Inspect</string>
    <string name="update_menu">Update</string>
    <string name="delete_menu">Delete</string>
    <string name="save">Save</string>
    <string name="num_add">Number</string>
    <string name="name_add">NAME</string>
    <string name="empty_not_saved">empty</string>
    <string name="fav">Favourite</string>
    <string name="edit">Edit</string>
</resources>