<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:contentDescription="@string/personal_img"/>

    <LinearLayout
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/number"
            android:textSize="15sp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/delete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_baseline_delete_24"
        android:contentDescription="@string/delete"/>
    <ImageButton
        android:id="@+id/fav"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_baseline_star_border_24"
        android:contentDescription="@string/fav" />



</LinearLayout>